hphp/test/zend/bad/ext/standard/tests/versioning/php_sapi_name_variation001.php
<?php
parse_str("foo=BAR", $_POST);
$_REQUEST = array_merge($_REQUEST, $_POST);
_filter_snapshot_globals();

echo php_sapi_name();
?>